# haskell-zookeeper-client

./: .gitignore  LICENSE  Makefile  README  ZooClient.hs  Zookeeper.hsc  c  zookeeper.cabal
src/: ZooClient.hs  Zookeeper.hsc
