Name:           zookeeper
Version:        0.0.1
Description:    Haskell bindings for zookeeper
License:        OtherLicense
License-file:   LICENSE
Author:         Sergiy Matusevych
Maintainer:     Sergiy Matusevych
Build-Type:     Simple
Cabal-Version:  >=1.8

Library
  Ghc-Options:     -threaded -O2 -Wall
  Extra-Libraries: zookeeper_mt
  Build-Depends:   base >= 4 && < 5, bytestring >= 0.9
  Hs-source-dirs:  src
  Exposed-modules: Zookeeper
  Extensions:      DeriveDataTypeable

Executable ZooClient
  Ghc-Options:     -threaded -O2 -Wall
  Extra-Libraries: zookeeper_mt
  Build-Depends:   base >= 4 && < 5, bytestring >= 0.9
  Hs-source-dirs:  src
  Main-is:         ZooClient.hs
  Other-modules:   Zookeeper
  Extensions:      DeriveDataTypeable

